--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,6 +32,7 @@ packages:
   - 'packages/plugins/FileService'
   - 'packages/plugins/DAO'
   - 'packages/plugins/RSS3'
+  - 'packages/plugins/Solana'
   - 'packages/external-plugin-previewer'
   - 'packages/backup-format'
   - 'packages/encryption'
