feat: add rollup

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -35,3 +35,4 @@ packages:
   - 'packages/external-plugin-previewer'
   - 'packages/backup-format'
   - 'packages/encryption'
+  - 'packages/provider-proxy'
