--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.27.0",
     "json-stable-stringify": "^1.0.1",
     "lodash-unified": "1.0.1",
+    "uuid": "^8.3.2",
     "urlcat": "^2.0.4"
   }
 }
