--- a/packages/web3-shared/base/package.json
+++ b/packages/web3-shared/base/package.json
@@ -4,6 +4,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "bignumber.js": "9.0.2"
+    "bignumber.js": "9.0.2",
+    "date-fns": "^2.27.0"
   }
 }
