refactor: move not business related code to @masknet/utils
maintain it as a context less package

--- a/packages/dashboard/tsconfig.json
+++ b/packages/dashboard/tsconfig.json
@@ -19,6 +19,7 @@
     { "path": "../plugins/Flow/" },
     { "path": "../plugins/Wallet/" },
     { "path": "../backup-format/" },
-    { "path": "../shared-base" }
+    { "path": "../shared-base" },
+    { "path": "../utils/" }
   ]
 }
