--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -32,6 +32,7 @@
     "@masknet/public-api": "workspace:*",
     "@masknet/sdk": "workspace:*",
     "@masknet/shared": "workspace:*",
+    "@masknet/utils": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
     "@masknet/typed-message": "workspace:*",
