--- a/packages/plugins/RSS3/tsconfig.json
+++ b/packages/plugins/RSS3/tsconfig.json
@@ -12,6 +12,7 @@
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../theme" },
+    { "path": "../../utils" },
     { "path": "../../web3-providers" }
   ]
 }
