--- a/packages/mask/src/tsconfig.json
+++ b/packages/mask/src/tsconfig.json
@@ -15,6 +15,7 @@
   // !       do not add dashboard/ as a reference otherwise there is a circular dependency on the type level.
   "references": [
     { "path": "../../public-api" },
+    { "path": "../../utils" },
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../typed-message/base" },
