--- a/packages/web3-shared/evm/package.json
+++ b/packages/web3-shared/evm/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.6",
     "@masknet/shared-base": "workspace:*",
+    "@masknet/utils": "workspace:*",
     "@masknet/web3-constants": "workspace:*",
     "@masknet/web3-contracts": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
