--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -5,6 +5,10 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@masknet/plugin-infra": "workspace:*",
+    "@masknet/web3-shared-evm": "workspace:*",
+    "@masknet/web3-shared-base": "workspace:*",
+    "bignumber.js": "^9.0.1",
+    "date-fns": "^2.27.0",
     "json-stable-stringify": "^1.0.1",
     "lodash-unified": "1.0.1",
     "urlcat": "^2.0.4"
