--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -9,5 +9,5 @@
     "resolveJsonModule": true
   },
   "include": ["./", "./**/*.json"],
-  "references": [{ "path": "../../shared-base" }]
+  "references": [{ "path": "../../shared-base" }, { "path": "../../shared/" }]
 }
