--- a/packages/web3-shared/base/package.json
+++ b/packages/web3-shared/base/package.json
@@ -5,7 +5,8 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "bignumber.js": "9.0.2",
-    "date-fns": "^2.27.0"
+    "date-fns": "^2.27.0",
+    "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "jest-websocket-mock": "^2.2.1",
