feat: add punk 3d glb

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -13,7 +13,8 @@
     "@ethersproject/address": "^5.0.4",
     "@ethersproject/providers": "^5.0.9",
     "@ethersproject/solidity": "^5.0.4",
-    "@hookform/resolvers": "2.8.5",
+    "@google/model-viewer": "^1.9.2",
+    "@hookform/resolvers": "2.8.3",
     "@masknet/dashboard": "workspace:*",
     "@masknet/encryption": "workspace:^0.0.0",
     "@masknet/external-plugin-previewer": "workspace:*",
@@ -57,6 +58,7 @@
     "@uniswap/v2-sdk": "3.0.0-alpha.2",
     "@uniswap/v3-sdk": "^3.3.2",
     "@unstoppabledomains/resolution": "^5.0.1",
+    "@webcomponents/custom-elements": "^1.5.0",
     "@walletconnect/client": "^1.2.2",
     "anchorme": "^2.1.2",
     "assert": "^2.0.0",
