refactor: revoke package.json

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -1,11 +1,8 @@
-
 {
   "name": "@masknet/extension",
   "private": true,
   "license": "AGPL-3.0-or-later",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "dependencies": {
     "@balancer-labs/sor": "^1.0.0",
     "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
