fix: unsafe location

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -50,6 +50,7 @@
         "unused-imports/no-unused-imports-ts": "error",
         "@dimensiondev/no-jsx-template-literal": "error",
         "@dimensiondev/no-number-constructor": "off",
+        "@dimensiondev/no-unsafe-location": "error",
         "@dimensiondev/prefer-early-return": "error",
         "@typescript-eslint/await-thenable": "error",
         "@typescript-eslint/no-for-in-array": "error",
