wip: upgrade wallet-adapter

--- a/packages/plugins/Solana/package.json
+++ b/packages/plugins/Solana/package.json
@@ -10,9 +10,9 @@
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
     "@masknet/web3-shared-solana": "workspace:*",
-    "@solana/wallet-adapter-base": "^0.7.0",
-    "@solana/wallet-adapter-react": "^0.13.1",
-    "@solana/wallet-adapter-wallets": "^0.11.3",
+    "@solana/wallet-adapter-base": "0.9.0",
+    "@solana/wallet-adapter-react": "0.15.0",
+    "@solana/wallet-adapter-wallets": "0.14.0",
     "@solana/web3.js": "^1.30.2",
     "bignumber.js": "^9.0.1",
     "react-use": "^17.3.1"
