--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,6 +20,7 @@ packages:
   - 'packages/web3-shared/base'
   - 'packages/web3-shared/evm'
   - 'packages/web3-shared/flow'
+  - 'packages/web3-shared/terra'
   - 'packages/web3-shared/solana'
   - 'packages/storybook-shared'
   - 'packages/icons'
@@ -29,6 +30,7 @@ packages:
   - 'packages/plugins/Debugger'
   - 'packages/plugins/Wallet'
   - 'packages/plugins/Flow'
+  - 'packages/plugins/Terra'
   - 'packages/plugins/FileService'
   - 'packages/plugins/DAO'
   - 'packages/plugins/RSS3'
