--- a/packages/dashboard/tsconfig.json
+++ b/packages/dashboard/tsconfig.json
@@ -12,9 +12,11 @@
     { "path": "../mask/src" },
     { "path": "../web3-shared/evm/" },
     { "path": "../web3-shared/flow/" },
+    { "path": "../web3-shared/terra/" },
     { "path": "../icons/" },
     { "path": "../plugin-infra" },
     { "path": "../plugins/Flow/" },
+    { "path": "../plugins/Terra/" },
     { "path": "../plugins/Wallet/" },
     { "path": "../backup-format/" },
     { "path": "../shared-base" }
