--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -1,7 +1,12 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "parserOptions": { "ecmaVersion": 7, "sourceType": "module", "project": "./tsconfig.eslint.json" },
+    "parserOptions": {
+        "ecmaVersion": 7,
+        "sourceType": "module",
+        "project": "./tsconfig.eslint.json",
+        "warnOnUnsupportedTypeScriptVersion": false
+    },
     "extends": ["../.eslintrc.json", "plugin:import/typescript"],
     "plugins": ["@typescript-eslint", "@dimensiondev", "unused-imports", "import", "unicorn", "react", "react-hooks"],
     "rules": {
