--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -11,7 +11,7 @@
     "@dimensiondev/snapshot.js": "0.2.0",
     "@ethersproject/abi": "^5.4.0",
     "@ethersproject/address": "^5.0.4",
-    "@ethersproject/providers": "^5.0.9",
+    "@ethersproject/providers": "^5.5.1",
     "@ethersproject/solidity": "^5.0.4",
     "@hookform/resolvers": "2.8.5",
     "@masknet/dashboard": "workspace:*",
@@ -19,13 +19,13 @@
     "@masknet/external-plugin-previewer": "workspace:*",
     "@masknet/icons": "workspace:*",
     "@masknet/injected-script": "workspace:*",
+    "@masknet/plugin-dao": "workspace:*",
+    "@masknet/plugin-debugger": "workspace:*",
     "@masknet/plugin-example": "workspace:*",
     "@masknet/plugin-file-service": "workspace:*",
     "@masknet/plugin-flow": "workspace:*",
-    "@masknet/plugin-rss3": "workspace:*",
-    "@masknet/plugin-dao": "workspace:*",
-    "@masknet/plugin-debugger": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
+    "@masknet/plugin-rss3": "workspace:*",
     "@masknet/plugin-wallet": "workspace:*",
     "@masknet/public-api": "workspace:*",
     "@masknet/sdk": "workspace:*",
@@ -39,6 +39,7 @@
     "@msgpack/msgpack": "^2.7.1",
     "@servie/events": "^3.0.0",
     "@sinonjs/text-encoding": "^0.7.1",
+    "@traderxyz/nft-swap-sdk": "^0.7.0",
     "@types/bn.js": "^4.11.6",
     "@types/d3": "5.16.4",
     "@types/elliptic": "^6.4.14",
