--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preinstall": "npx only-allow pnpm",
     "postinstall": "patch-package",
     "prepare": "husky install",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --forceExit",
     "spellcheck": "cspell lint --no-must-find-files"
   },
   "lint-staged": {
