--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -29,6 +29,7 @@
         "import/no-deprecated": "warn",
         "no-cond-assign": "error",
         "no-constant-condition": "error",
+        "no-duplicate-imports": "off",
         "no-script-url": "error",
         "no-throw-literal": "error",
         "no-unmodified-loop-condition": "error",
