fix: .eslintrc.json

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -14,30 +14,12 @@
             "error",
             {
                 "paths": [
-                    {
-                        "name": "lodash",
-                        "message": "Please use lodash-unified instead."
-                    },
-                    {
-                        "name": "lodash-es",
-                        "message": "Please use lodash-unified instead."
-                    },
-                    {
-                        "name": "date-fns",
-                        "message": "Please use date-fns/{submodule} instead."
-                    },
-                    {
-                        "name": "date-fns/esm",
-                        "message": "Please use date-fns/{submodule} instead."
-                    },
-                    {
-                        "name": "idb",
-                        "message": "Please use idb/with-async-ittr instead."
-                    },
-                    {
-                        "name": "idb/with-async-ittr-cjs",
-                        "message": "Please use idb/with-async-ittr instead."
-                    }
+                    { "name": "lodash", "message": "Please use lodash-unified instead." },
+                    { "name": "lodash-es", "message": "Please use lodash-unified instead." },
+                    { "name": "date-fns", "message": "Please use date-fns/{submodule} instead." },
+                    { "name": "date-fns/esm", "message": "Please use date-fns/{submodule} instead." },
+                    { "name": "idb", "message": "Please use idb/with-async-ittr instead." },
+                    { "name": "idb/with-async-ittr-cjs", "message": "Please use idb/with-async-ittr instead." }
                 ]
             }
         ],
@@ -53,32 +35,15 @@
         "no-useless-concat": "error",
         "prefer-regex-literals": "error",
         "react/jsx-boolean-value": "error",
-        "react/jsx-curly-brace-presence": [
-            "warn",
-            {
-                "props": "never",
-                "children": "never"
-            }
-        ],
+        "react/jsx-curly-brace-presence": ["warn", { "props": "never", "children": "never" }],
         "react/jsx-key": "error",
         "react/no-invalid-html-attribute": "error",
         "react/no-unknown-property": "error",
-        "react/self-closing-comp": [
-            "warn",
-            {
-                "component": true,
-                "html": true
-            }
-        ],
+        "react/self-closing-comp": ["warn", { "component": true, "html": true }],
         "react-hooks/exhaustive-deps": "off",
         "react-hooks/rules-of-hooks": "error",
         "unicorn/better-regex": "error",
-        "unicorn/catch-error-name": [
-            "error",
-            {
-                "ignore": ["^err$"]
-            }
-        ],
+        "unicorn/catch-error-name": ["error", { "ignore": ["^err$"] }],
         "unicorn/no-instanceof-array": "error",
         "unicorn/no-new-array": "error",
         "unicorn/no-new-buffer": "error",
