--- a/packages/plugin-infra/package.json
+++ b/packages/plugin-infra/package.json
@@ -7,6 +7,7 @@
   "scripts": {},
   "dependencies": {
     "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
+    "@masknet/encryption": "workspace:^0.0.0",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
