--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -6,7 +6,12 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src"],
-  "references": [{ "path": "../shared/" }, { "path": "../shared-base" }, { "path": "../theme" }],
+  "references": [
+    { "path": "../shared/" },
+    { "path": "../shared-base" },
+    { "path": "../theme" },
+    { "path": "../encryption" }
+  ],
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": { "module": "CommonJS" }
