feat: api provider proxy (#5210)
* feat: add producer

* feat: add rollup

* feat: ci

* feat: add proxy class

* test: should cache divide data when server push different response

* feat: happy pass for get debank asset

* fix: remove console

* chore: use esbuild

* chore: extra

* fix: build

* feat: pack the package

* feat: update deploy ci config

* feat: add zerion fallback for get fungible token asset list

* fix: update deploy ci

* fix: use dimension dev token action to publish

* feat: update package to publish

* feat: generate ts type

* feat: change ci

* feat: support dts rollup

* feat: disable get asset from zerion

* feat: add fetch non fungible token from opensea

* feat: add fetch non fungible collectible from opensea

* feat: should clear websocket pool data

* feat: add opensea data in producer

* feat: use socket to loading nft in web3 tab

* fix: cspell

* feat: add async send for websocket

* feat: send single request when use web socket and close

* feat: dashboard collection use http restful

* fix: style

* feat: add production websocket endpoint

* fix: ci

* chore: move down jest dependencies

* chore: add comment for provider proxy

* refactor: rename use websocket

* fix: error

* chore: add deploy ci

* feat: add use socket hook

* fix: test method type

* fix: ci

* feat: use single websocket instance

* feat: improve nft wall

* feat: merge develop

* feat: support rarible

* fix: try fix deploy provider proxy to gh pkg

* feat: support rarible

* feat: dashboard nft list use websocket

* fix: dashboard nft list use websocket alway loading

* refactor: remove unused code

* refactor: should show in rarible nft in rarible tab

* fix: disable cors in proxy for web3-proider

* fix: opensea nft response type

* fix: use reconnecting websocket to replace websocket

* fix: if have instance use it

* refactor: remove tood

* fix:

--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -7,11 +7,13 @@
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-evm": "workspace:*",
-    "bignumber.js": "^9.0.1",
+    "bignumber.js": "9.0.1",
     "date-fns": "^2.27.0",
     "json-stable-stringify": "^1.0.1",
     "lodash-unified": "1.0.1",
     "rss3-next": "^0.6.17",
+    "socket.io-client": "2.4.0",
+    "uuid": "^8.3.2",
     "urlcat": "^2.0.4"
   }
 }
