--- a/packages/plugins/Solana/package.json
+++ b/packages/plugins/Solana/package.json
@@ -5,6 +5,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@masknet/icons": "workspace:*",
+    "@masknet/injected-script": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
@@ -15,6 +16,9 @@
     "@solana/wallet-adapter-wallets": "0.14.0",
     "@solana/web3.js": "^1.30.2",
     "bignumber.js": "^9.0.1",
+    "bn.js": "^4.12.0",
+    "bs58": "^4.0.1",
+    "buffer": "^6.0.3",
     "react-use": "^17.3.1"
   }
 }
