chore: move gun to own package

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -17,15 +17,16 @@
     "@masknet/dashboard": "workspace:*",
     "@masknet/encryption": "workspace:^0.0.0",
     "@masknet/external-plugin-previewer": "workspace:*",
+    "@masknet/gun-utils": "workspace:^undefined",
     "@masknet/icons": "workspace:*",
     "@masknet/injected-script": "workspace:*",
+    "@masknet/plugin-dao": "workspace:*",
+    "@masknet/plugin-debugger": "workspace:*",
     "@masknet/plugin-example": "workspace:*",
     "@masknet/plugin-file-service": "workspace:*",
     "@masknet/plugin-flow": "workspace:*",
-    "@masknet/plugin-rss3": "workspace:*",
-    "@masknet/plugin-dao": "workspace:*",
-    "@masknet/plugin-debugger": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
+    "@masknet/plugin-rss3": "workspace:*",
     "@masknet/plugin-wallet": "workspace:*",
     "@masknet/public-api": "workspace:*",
     "@masknet/sdk": "workspace:*",
@@ -77,7 +78,6 @@
     "fuse.js": "^6.5.3",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
-    "gun": "^0.2020.1234",
     "history": "^5.2.0",
     "https-browserify": "^1.0.0",
     "i18next-browser-languagedetector": "^6.1.2",
