--- a/packages/plugins/Solana/package.json
+++ b/packages/plugins/Solana/package.json
@@ -10,6 +10,8 @@
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
+    "@masknet/web3-providers": "workspace:*",
+    "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-solana": "workspace:*",
     "@solana/wallet-adapter-base": "0.9.0",
     "@solana/wallet-adapter-react": "0.15.0",
