--- a/packages/plugins/Solana/tsconfig.json
+++ b/packages/plugins/Solana/tsconfig.json
@@ -14,6 +14,8 @@
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../theme" },
+    { "path": "../../web3-providers" },
+    { "path": "../../web3-shared/base" },
     { "path": "../../web3-shared/solana" }
   ]
 }
