--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -38,8 +38,8 @@
     "json-stable-stringify": "^1.0.1",
     "react-avatar-editor": "^12.0.0",
     "react-hook-form": "^7.22.5",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router": "6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-use": "^17.3.1",
     "unstated-next": "^1.1.0",
     "urlcat": "^2.0.4",
