fix: no-locale-case

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -55,7 +55,9 @@
         "unicorn/throw-new-error": "error",
         "unused-imports/no-unused-imports-ts": "error",
         "@dimensiondev/no-jsx-template-literal": "error",
+        "@dimensiondev/no-locale-case": "error",
         "@dimensiondev/no-number-constructor": "off",
+        "@dimensiondev/no-simple-string-interpolation": "off",
         "@dimensiondev/no-simple-template-literal": "error",
         "@dimensiondev/no-unsafe-location": "error",
         "@dimensiondev/prefer-early-return": "error",
