fix: import/no-duplicates

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -26,10 +26,10 @@
         "yoda": "error",
         "radix": "error",
         "eqeqeq": ["error", "always"],
-        "import/no-deprecated": "warn",
+        "import/no-deprecated": "error",
+        "import/no-duplicates": "error",
         "no-cond-assign": "error",
         "no-constant-condition": "error",
-        "no-duplicate-imports": "off",
         "no-script-url": "error",
         "no-throw-literal": "error",
         "no-unmodified-loop-condition": "error",
