--- a/packages/plugins/FileService/tsconfig.json
+++ b/packages/plugins/FileService/tsconfig.json
@@ -12,6 +12,7 @@
     { "path": "../../plugin-infra" },
     { "path": "../../shared-base" },
     { "path": "../../shared" },
+    { "path": "../../icons" },
     { "path": "../Wallet" }
   ]
 }
