feat: add <FolderTabs />

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@emotion/styled": "^11.6.0",
     "@emotion/utils": "^1.0.0",
     "@mui/icons-material": "5.2.5",
-    "@mui/lab": "5.0.0-alpha.61",
+    "@mui/base": "5.0.0-alpha.64",
+    "@mui/lab": "5.0.0-alpha.64",
     "@mui/material": "5.2.5",
     "@mui/system": "5.2.5",
     "@types/masknet__global-types": "workspace:*",
