--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist/src/",
-    "tsBuildInfoFile": "./dist/src.tsbuildinfo"
+    "tsBuildInfoFile": "./dist/src.tsbuildinfo",
+    "preserveSymlinks": true
   },
   "include": ["./src"],
   "references": [{ "path": "../icons" }]
