--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/lab": "5.0.0-alpha.61",
     "@mui/material": "5.2.5",
     "@mui/system": "5.2.5",
+    "@mui/styled-engine": "5.2.5",
     "@types/masknet__global-types": "workspace:*",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
