--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -33,6 +33,7 @@
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
+    "@masknet/typed-message": "workspace:*",
     "@masknet/web3-contracts": "workspace:*",
     "@masknet/web3-providers": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
