--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist/src/",
-    "tsBuildInfoFile": "./dist/src.tsbuildinfo",
-    "preserveSymlinks": true
+    "tsBuildInfoFile": "./dist/src.tsbuildinfo"
   },
   "include": ["./src"],
   "references": [{ "path": "../icons" }]
