--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -54,13 +54,15 @@
         "unicorn/prefer-number-properties": "error",
         "unicorn/throw-new-error": "error",
         "unused-imports/no-unused-imports-ts": "error",
+        "@dimensiondev/no-bigint": "error",
         "@dimensiondev/no-jsx-template-literal": "error",
         "@dimensiondev/no-locale-case": "error",
         "@dimensiondev/no-number-constructor": "off",
         "@dimensiondev/no-simple-string-interpolation": "off",
         "@dimensiondev/no-simple-template-literal": "error",
-        "@dimensiondev/no-unsafe-location": "error",
         "@dimensiondev/prefer-early-return": "error",
+        "@dimensiondev/prefer-location-assign": "error",
+        "@dimensiondev/unicode-specific-set": "error",
         "@typescript-eslint/await-thenable": "error",
         "@typescript-eslint/no-base-to-string": "off",
         "@typescript-eslint/no-for-in-array": "error",
