--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -33,6 +33,7 @@
         "no-script-url": "error",
         "no-throw-literal": "error",
         "no-unmodified-loop-condition": "error",
+        "no-unneeded-ternary": "error",
         "no-useless-concat": "error",
         "prefer-regex-literals": "error",
         "react/jsx-boolean-value": "error",
