fix: no-extra-boolean-cast

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -26,10 +26,9 @@
         "yoda": "error",
         "radix": "error",
         "eqeqeq": ["error", "always"],
-        "import/no-deprecated": "error",
-        "import/no-duplicates": "error",
         "no-cond-assign": "error",
         "no-constant-condition": "error",
+        "no-extra-boolean-cast": "error",
         "no-script-url": "error",
         "no-throw-literal": "error",
         "no-unmodified-loop-condition": "error",
@@ -44,6 +43,8 @@
         "react/self-closing-comp": ["warn", { "component": true, "html": true }],
         "react-hooks/exhaustive-deps": "off",
         "react-hooks/rules-of-hooks": "error",
+        "import/no-deprecated": "error",
+        "import/no-duplicates": "error",
         "unicorn/better-regex": "error",
         "unicorn/catch-error-name": ["error", { "ignore": ["^err$"] }],
         "unicorn/no-instanceof-array": "error",
