chore: add no-loss-of-precision

--- a/packages/.eslintrc.json
+++ b/packages/.eslintrc.json
@@ -34,6 +34,7 @@
         "no-unmodified-loop-condition": "error",
         "no-unneeded-ternary": "error",
         "no-useless-concat": "error",
+        "no-loss-of-precision": "error",
         "prefer-regex-literals": "error",
         "react/jsx-boolean-value": "error",
         "react/jsx-curly-brace-presence": ["warn", { "props": "never", "children": "never" }],
