chore: improve spellcheck

--- a/.github/workflows/spell-checking.yml
+++ b/.github/workflows/spell-checking.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-spell:
+  spellcheck:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
