chore: delete reexpor from shared-base

--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -9,5 +9,10 @@
     "resolveJsonModule": true
   },
   "include": ["./", "./**/*.json"],
-  "references": [{ "path": "../../shared-base" }, { "path": "../../shared/" }, { "path": "../../typed-message/dom" }]
+  "references": [
+    { "path": "../../shared-base" },
+    { "path": "../../shared/" },
+    { "path": "../../typed-message/base" },
+    { "path": "../../typed-message/dom" }
+  ]
 }
