--- a/packages/plugins/FileService/package.json
+++ b/packages/plugins/FileService/package.json
@@ -5,12 +5,13 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@dimensiondev/common-protocols": "1.6.0-20210723072221-8f46a92",
+    "@masknet/icons": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/plugin-wallet": "workspace:*",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
-    "@masknet/icons": "workspace:*",
+    "@masknet/typed-message": "workspace:*",
     "@msgpack/msgpack": "^2.7.1",
     "arweave": "^1.10.3",
     "date-fns": "^2.27.0",
