--- a/packages/encryption/tsconfig.json
+++ b/packages/encryption/tsconfig.json
@@ -7,5 +7,5 @@
     "stripInternal": true
   },
   "include": ["./src/**/*"],
-  "references": [{ "path": "../shared-base" }]
+  "references": [{ "path": "../shared-base" }, { "path": "../typed-message/base" }]
 }
