--- a/packages/mask/src/tsconfig.json
+++ b/packages/mask/src/tsconfig.json
@@ -20,6 +20,7 @@
     { "path": "../../web3-shared/flow" },
     { "path": "../../web3-providers" },
     { "path": "../../theme" },
+    { "path": "../../typed-message/base" },
     { "path": "../../typed-message/dom" },
     { "path": "../../icons" },
     { "path": "../../plugin-infra" },
