--- a/packages/plugin-infra/package.json
+++ b/packages/plugin-infra/package.json
@@ -11,6 +11,7 @@
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
+    "@masknet/typed-message": "workspace:*",
     "@servie/events": "^3.0.0",
     "@types/use-subscription": "^1.0.0",
     "async-call-rpc": "^6.0.1",
