--- a/packages/plugins/FileService/tsconfig.json
+++ b/packages/plugins/FileService/tsconfig.json
@@ -11,6 +11,7 @@
     { "path": "../../theme" },
     { "path": "../../plugin-infra" },
     { "path": "../../shared-base" },
+    { "path": "../../typed-message/base" },
     { "path": "../../shared" },
     { "path": "../../icons" },
     { "path": "../Wallet" }
