--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -14,14 +14,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  prettier:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - uses: actions/setup-node@v2
-      - run: npx prettier@2.5.0 --list-different .
   anti-trojan-source:
     runs-on: ubuntu-20.04
     steps:
@@ -30,6 +22,14 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-node@v2
       - run: npx anti-trojan-source --files='packages/**/src/**/*.{ts,tsx,js}'
+  prettier:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - uses: actions/setup-node@v2
+      - run: npx prettier@2.5.0 --check .
   locale-kit:
     runs-on: ubuntu-20.04
     steps:
@@ -38,11 +38,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: 6.23.1
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: 16
+          cache: pnpm
       - run: pnpm install
       - run: npx gulp locale-kit
   type-check-and-jest:
@@ -57,11 +57,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: 6.23.1
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: 16
+          cache: pnpm
       - run: pnpm install
       - run: npx gulp codegen
       - run: npx gulp polyfill
@@ -74,11 +74,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: 6.23.1
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: 16
+          cache: pnpm
       - run: pnpm install
       - run: pnpm run lint:ci -- --max-warnings=0
       - run: pnpm run lint:ci -- --format=junit --output-file=reports/junit/eslint-results.xml
