feat: add logo for QR code

--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -39,6 +39,7 @@
     "json-stable-stringify": "^1.0.1",
     "react-avatar-editor": "^12.0.0",
     "react-hook-form": "^7.22.5",
+    "react-qrcode-logo": "^2.5.0",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-to-print": "^2.14.3",
